@@ -79,6 +79,9 @@
 ;EstimateVisible 1
 ;EstimateText "estimated"
 
+# interface order (0 = alphabetical by name, 1 = alphabetical by alias)
+;InterfaceOrder 0
+
 
 # vnstatd
 ##
